[gd_scene load_steps=6 format=3 uid="uid://dy3q0q3f1c4rv"]

[ext_resource type="Script" path="res://Scripts/document.gd" id="1_orax3"]
[ext_resource type="Texture2D" uid="uid://c4jxl63wswp4s" path="res://Sprites/Documents/EntryTicket smol.png" id="3_hkowy"]
[ext_resource type="Texture2D" uid="uid://wpolil7dapgs" path="res://Sprites/Documents/Entry Ticket Template.png" id="4_ajlss"]
[ext_resource type="FontFile" uid="uid://dn2kldfkn58tp" path="res://Fonts/bm_miniDocuments/BMmini.TTF" id="5_4bjfv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wei6o"]
size = Vector2(51, 46)

[node name="Document" type="CharacterBody2D" node_paths=PackedStringArray("giveText", "labels") groups=["Papers"]]
collision_layer = 6
input_pickable = true
slide_on_ceiling = false
platform_on_leave = 2
script = ExtResource("1_orax3")
bigTextureScale = 1.5
bigTexture = ExtResource("4_ajlss")
smallTexture = ExtResource("3_hkowy")
giveText = NodePath("Clipper/Labels/GiveText")
labels = NodePath("Clipper/Labels")

[node name="Clipper" type="Sprite2D" parent="."]
clip_children = 1
texture = ExtResource("4_ajlss")

[node name="MainImages" type="Sprite2D" parent="Clipper"]

[node name="Labels" type="Node2D" parent="Clipper"]

[node name="DateLable" type="Label" parent="Clipper/Labels"]
offset_left = -25.0
offset_top = 41.0
offset_right = 73.0
offset_bottom = 57.0
scale = Vector2(0.525158, 0.525158)
theme_override_fonts/font = ExtResource("5_4bjfv")
text = "1/20/1999"
horizontal_alignment = 1

[node name="Date" type="TextureButton" parent="Clipper/Labels/DateLable"]
layout_mode = 0
offset_top = -1.86313
offset_right = 40.0
offset_bottom = 38.1369
scale = Vector2(2.44065, 0.395672)
button_mask = 0

[node name="NameLalble" type="Label" parent="Clipper/Labels"]
offset_left = -50.0
offset_top = -20.0
offset_right = 149.0
offset_bottom = 3.0
scale = Vector2(0.501845, 0.501845)
theme_override_colors/font_color = Color(0.290196, 0.470588, 0.662745, 1)
theme_override_fonts/font = ExtResource("5_4bjfv")
text = "Lea Wateringcan"
horizontal_alignment = 1
text_overrun_behavior = 1

[node name="Name" type="TextureButton" parent="Clipper/Labels/NameLalble"]
layout_mode = 0
offset_left = -7.97059
offset_top = -3.98529
offset_right = 32.0294
offset_bottom = 36.0147
scale = Vector2(5.40214, 0.566997)
button_mask = 0

[node name="GiveText" type="Label" parent="Clipper/Labels"]
offset_left = -12.0
offset_top = -36.0
offset_right = 28.0
offset_bottom = -13.0
scale = Vector2(0.58513, 0.58513)
theme_override_fonts/font = ExtResource("5_4bjfv")
text = "Give"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SmallCollider" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_wei6o")
one_way_collision = true
one_way_collision_margin = 0.1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
